--- a/code/src/My/MainBundle/Resources/config/routing.yml
+++ b/code/src/My/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
-my_main_homepage:
+homepage:
     pattern:  /
     defaults: { _controller: MyMainBundle:Pages:home }
+
+games_show:
+    pattern: /games/{game}
+    defaults: { _controller: MyMainBundle:Games:show }
