--- a/code/app/config/security.yml
+++ b/code/app/config/security.yml
@@ -30,4 +30,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/app/, role: [ROLE_USER, IS_AUTHENTICATED_REMEMBERED] }
+        - { path: ^/play/, role: [ROLE_USER, IS_AUTHENTICATED_REMEMBERED] }
