--- a/code/src/My/MainBundle/Resources/config/routing.yml
+++ b/code/src/My/MainBundle/Resources/config/routing.yml
@@ -2,6 +2,6 @@ homepage:
     pattern:  /
     defaults: { _controller: MyMainBundle:Pages:home }
 
-games_show:
-    pattern: /games/{game}
-    defaults: { _controller: MyMainBundle:Games:show }
+play:
+    resource: "@MyMainBundle/Resources/config/routing/play.yml"
+    prefix:   /play
