Ability to garrison ships

--- a/code/src/My/MainBundle/Resources/config/routing/play.yml
+++ b/code/src/My/MainBundle/Resources/config/routing/play.yml
@@ -22,3 +22,11 @@ games_leave:
 command_fleet_create:
     pattern: /commands/createfleet/{base}
     defaults: { _controller: MyMainBundle:Commands:createFleet }
+    requirements:
+        _method: POST
+
+command_fleet_station:
+    pattern: /commands/stationfleets/{base}
+    defaults: { _controller: MyMainBundle:Commands:stationFleets }
+    requirements:
+        _method: POST
