--- a/code/app/config/security.yml
+++ b/code/app/config/security.yml
@@ -31,3 +31,4 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/play/, role: [ROLE_USER, IS_AUTHENTICATED_REMEMBERED] }
+        - { path: ^/admin/, role: [ROLE_ADMIN] }
