--- a/frontend/app/config/parameters.yml.dist
+++ b/frontend/app/config/parameters.yml.dist
@@ -2,9 +2,9 @@ parameters:
     database_driver:   pdo_mysql
     database_host:     127.0.0.1
     database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
+    database_name:     greenspace
+    database_user:     dev
+    database_password: dev
 
     mailer_transport:  smtp
     mailer_host:       127.0.0.1
@@ -12,4 +12,4 @@ parameters:
     mailer_password:   ~
 
     locale:            en
-    secret:            ThisTokenIsNotSoSecretChangeIt
+    secret:            orqwhfkajsbqiuigrfviq3ywjhavywufiqyewfgwqyeavcwiçfgqilwu
