--- a/frontend/composer.json
+++ b/frontend/composer.json
@@ -45,7 +45,7 @@
         "jms/serializer-bundle": "0.12.*@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "~3.8@dev"
+        "phpunit/phpunit": "4.0.*@dev"
     },
     "scripts": {
         "post-install-cmd": [
@@ -66,7 +66,7 @@
     "config": {
         "bin-dir": "bin"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
